Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79909

Crash after permission asked/granted on android QML video record.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.14.0
    • 5.12.5
    • Multimedia
    • None
    • Tested on a galaxy A8 Android Pie and a Nexus 7 (2013) Android Marshmallow
    • Android
    • 72fdf4b20e916ea87b334be1a35235ac1023e0d8 (qt/qtmultimedia/5.14)

      Easy to reproduce :
      Run the declarative-camera sample on an android device with the permissions not yet granted.
      Switch to video, hit record, grant the permission to record audio => crash.

      Once permissions are granted, subsequent runs will work flawlessly.

        For Gerrit Dashboard: QTBUG-79909
        # Subject Branch Project Status CR V

            valentyn.doroshchuk Valentyn Doroshchuk
            tryum Thibault Jochem
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes